appset1/networking/unifi/controller/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: unifi.loeber.live
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: unifi.loeber.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi-lb
            port:
              name: devices
  tls:
  - hosts:
    - unifi.loeber.live
    secretName: unifi-tls
